Changed github username for production.

--- a/_config.yml
+++ b/_config.yml
@@ -18,8 +18,8 @@ plugins:
 
 # Social Media
 twitter_username: LINQS_edu
-# github_username: linqs
-github_username: eriq-augustine
+github_username: linqs
+# github_username: eriq-augustine
 youtube_channel: UCJjzqRLiAIa3qENUkzK0zMA
 googleplus_group: "106422136513784453367"
 rss: true
