Updated Youtube link to use custom url.

--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,8 @@ plugins:
 
 # Social Media
 twitter_username: LINQS_edu
-youtube_channel: UCJjzqRLiAIa3qENUkzK0zMA
+# youtube_channel: UCJjzqRLiAIa3qENUkzK0zMA
+youtube_username: LINQSLab
 googleplus_group: "106422136513784453367"
 rss: true
 
