Removed the Google Plus link.

--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ plugins:
 twitter_username: LINQS_edu
 # youtube_channel: UCJjzqRLiAIa3qENUkzK0zMA
 youtube_username: LINQSLab
-googleplus_group: "106422136513784453367"
+# googleplus_group: "106422136513784453367"
 rss: true
 
 # Analytics
