--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,9 @@ youtube_username: LINQSLab
 # googleplus_group: "106422136513784453367"
 rss: true
 
+# Show posts even if they are in the future.
+future: true
+
 # Analytics
 google_analytics: UA-124343227-1
 
