--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,8 @@ description: >- # this means to ignore newlines until "baseurl:"
    PSL has produced state-of-the-art results in many areas spanning natural language processing, social-network analysis, and computer vision.
    The PSL framework is available as an Apache-licensed, open source project on GitHub with an active user group for support.
 
+linqs_website: https://linqs.github.io/linqs-website
+
 # Dev:
 # baseurl: "/psl-website" # the subpath of your site, e.g. /blog
 # github_username: eriq-augustine
